--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,33 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+.country-list__item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  font-size: 20px;
+  font-style: bold;
+  font-weight: 600;
+}
+
+.country-info {
+  margin: 10px;
+}
+
+.country-info__name {
+  font-size: 20px;
+  font-style: unset;
+  font-weight: 800;
+}
+
+.country-info__span {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+}
